# Conductor_ERP

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMPLETION_PLAN.md  DECISIONS.md  Dockerfile  GROWTH_PLAN.md  PRODUCT.md  PROJECT_STATUS.md  README.md  docker-compose.yml  erp_questionnaire_v4.html  manage.py  project_context.md  pyproject.toml  requirements.txt  run-dev.bat  run-dev.ps1  run.cmd
.claude/: launch.json
Docs/: Conductor_ERP_Product_Design_Engineering_Directive.md  Linear_inbox.txt  RUNBOOK.md  conductor_erp_ai_agent_prompt ui ux tips 2.md  conductor_erp_ai_agent_prompt ui ux tips.md  linear Sidebar.txt  linear_filter .txt  linear_tooltip.txt  ux-audit-2026-07.md
Docs/Brand/: Conductor_Brand_Marketing_Brief.md  Conductor_ERP_Product_Design_Engineering_Directive.md  Conductor_Visual_Identity_System.md
Docs/Coloring system/: 00_START_HERE.md  (+7 more)
architecture/: api.md  database.md  dependencies.md  error-catalog.md  events.md  modules.md  workflows.md
config/: __init__.py  celery.py  spa.py  urls.py
deploy/: .env.prod.example  serve_waitress.py
erp/: __init__.py
files/: 00_EXECUTE_ALL.md  ERP_BuildSpec.md  PHASE_00_scaffold_and_gates.md  PHASE_01_schema_migrations_seed.md  PHASE_02_execution_engine.md  PHASE_03_node_executors.md  PHASE_04_integration_adapters.md  PHASE_05_backend_api.md  PHASE_06_frontend_foundation.md  PHASE_07_frontend_screens.md  PHASE_08_reference_use_case_e2e.md  PHASE_09_cleanup_commit.md  System Architecture & Engineering Requirements.md.txt
scripts/: seed_demo.py
(+648 files in other folders)
